# geant4_cherenkov

./: .gitignore  BINARY_OUTPUT_README.md  CMakeLists.txt  CherenkovSim.cc  README.md  analyze_cherenkov.py  analyze_cherenkov_fast.py  analyze_input_phsp.py  build.sh  build_cherenkov_kernel.py  config.json  config_example.json  init_vis.mac  note.md  read_binary_phsp.py  run.mac  run_simulation.sh  test.mac
analysis/: analyze_cherenkov.py  analyze_cherenkov_fast.py  analyze_phsp_dose_correlation.py  build_cherenkov_kernel.py  build_dose_kernel.py  test_analyze_cherenkov.py  test_analyze_cherenkov_fast.py  test_build_cherenkov_kernel.py  test_build_dose_kernel.py
analysis/analysis_input_phsp/: input_phsp_analysis_report.txt  input_phsp_analysis_report_zh.md
analysis/phsp_dose_correlation/: README.md  correlation_summary.txt
dose_kernel_output/: kernel_01_energy_sum.npy  kernel_02_normalized.npy  kernel_03_uncertainty.npy  kernel_03_uncertainty_approximate.txt  kernel_04_voxel_edges.npz  kernel_05_dose_Gy_per_primary.npy  kernel_stats.json  kernel_stats.txt
include/: ActionInitialization.hh  Config.hh  DetectorConstruction.hh  DoseBuffer.hh  EventAction.hh  PHSPPrimaryGeneratorAction.hh  PhotonBuffer.hh  RunAction.hh  RunMetadata.hh  SteppingAction.hh
kernel_output/: kernel_01_counts.npy  kernel_02_normalized.npy  kernel_03_uncertainty.npy  kernel_04_voxel_edges.npz  kernel_stats.json  kernel_stats.txt
kernel_output_e2e_test/: kernel_01_counts.npy  kernel_02_normalized.npy  kernel_03_uncertainty.npy  kernel_stats.json  kernel_stats.txt
kernel_output_test/: kernel_01_counts.npy  kernel_02_normalized.npy  kernel_03_uncertainty.npy  kernel_stats.json  kernel_stats.txt
macros/: run_base.mac
scripts/: analyze_run_meta.py  build.sh  run_kernel_after_full.sh  run_simulation.sh
src/: ActionInitialization.cc  Config.cc  DetectorConstruction.cc  DoseBuffer.cc  EventAction.cc  PHSPPrimaryGeneratorAction.cc  PhotonBuffer.cc  RunAction.cc  RunMetadata.cc  SteppingAction.cc
